--- a/configs/buildroot_defconfig
+++ b/configs/buildroot_defconfig
@@ -24,7 +24,7 @@ BR2_PACKAGE_BUSYBOX_CONFIG="../configs/busybox.config"
 BR2_PACKAGE_DHRYSTONE=y
 BR2_PACKAGE_MEMSTAT=y
 BR2_PACKAGE_RAMSPEED=y
-BR2_PACKAGE_NFS_UTILS=y
+# BR2_PACKAGE_NFS_UTILS=y
 BR2_PACKAGE_LIBNFS=y
 BR2_PACKAGE_ETHTOOL=y
 # BR2_PACKAGE_IFUPDOWN_SCRIPTS is not set
