--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,6 @@
 [submodule "game/vitetris"]
 	path = game/vitetris
 	url = https://github.com/pulp-platform/vitetris.git
+[submodule "coremark"]
+	path = coremark
+	url = https://github.com/2002liush/riscv-coremark.git
